tests/ui/empty-ensure.stderr
error: no rules expected the token `)`
 --> tests/ui/empty-ensure.rs:4:5
  |
4 |     ensure!();
  |     ^^^^^^^^^ no rules expected this token in macro call
  |
  = note: this error originates in the macro `ensure` (in Nightly builds, run with -Z macro-backtrace for more info)
